--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "fs-extra": "^9.0.1",
     "multer": "^1.4.2",
     "multer-storage-cloudinary": "^4.0.0",
+    "path": "^0.12.7",
     "uniqid": "^5.2.0"
   },
   "devDependencies": {
