--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express": "^4.17.1",
     "express-list-endpoints": "^5.0.0",
     "fs-extra": "^9.0.1",
+    "json2csv": "^5.0.5",
     "multer": "^1.4.2",
     "multer-storage-cloudinary": "^4.0.0",
     "path": "^0.12.7",
